Change inputs to number input and add valid ranges

--- a/tax.html
+++ b/tax.html
@@ -13,17 +13,17 @@
     <body>
         <p>
             <label>Town money:<br>
-            <input id="town-money" value="0" /></label>
+            <input type="number" min="0" id="town-money"/></label>
         </p>
 
         <p>
             <label>Run money:<br>
-            <input id="run-money" value="1000" /></label>
+            <input type="number" min="0" max="999999999" id="run-money" value="1000" /></label>
         </p>
 
         <p>
             <label>Treasury level:<br>
-            <input id="treasury-level" value="1" /></label>
+            <input type="number" min="1" id="treasury-level" value="1" /></label>
         </p>
 
         <p>
@@ -33,17 +33,17 @@
 
         <p>
             <label>Town money:<br>
-            <input id="inv-town-money" value="0" /></label>
+            <input type="number" min="0" id="inv-town-money" value="0" /></label>
         </p>
 
         <p>
             <label>Target money:<br>
-            <input id="inv-total-money" value="1000" /></label>
+            <input type="number" min="0" max="999999999" id="inv-total-money" value="1000" /></label>
         </p>
 
         <p>
             <label>Treasury level:<br>
-            <input id="inv-treasury-level" value="1" /></label>
+            <input type="number" min="1" id="inv-treasury-level" value="1" /></label>
         </p>
 
         <p>
