Return a better error message when the limit for inverse tax search is reached
Not quite excellent code, but it works.

--- a/tax.html
+++ b/tax.html
@@ -130,6 +130,8 @@
                         return bisect(lowerBounds, upperBounds);
                     }
                 }
+
+                return 'Exceeds 4 billion';
             }
 
             function onInvChange()
