Initialize town money to 0

--- a/tax.html
+++ b/tax.html
@@ -13,7 +13,7 @@
     <body>
         <p>
             <label>Town money:<br>
-            <input type="number" min="0" id="town-money"/></label>
+            <input type="number" min="0" id="town-money" value="0"/></label>
         </p>
 
         <p>
