Add link to source code

--- a/tax.html
+++ b/tax.html
@@ -54,6 +54,10 @@
             Run Money: <b id="inv-result"></b><br/>
         </p>
 
+        <p>
+            <a href="https://github.com/TomyLobo/hoh-taxcalc">Source code</a>
+        </p>
+
         <script>
             g_inputTownMoney = document.getElementById("town-money");
             g_inputRunMoney = document.getElementById("run-money");
