Add link back to Miss' calculator

--- a/tax.html
+++ b/tax.html
@@ -11,6 +11,8 @@
     </head>
 
     <body>
+        <p>Check out <a href="http://missdev.nl/tax.html">Miss' version</a> of this Tax calculator, which it is based on!</p>
+
         <p>
             <label>Town money:<br>
             <input type="number" min="0" id="town-money" value="0"/></label>
